<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.hasla.DodajHaslo"
    tools:ignore="MergeRootFrame" >
		
    <ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="4dp">
    
        <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
	        android:background="@drawable/szczegoly_background"
	        android:orientation="vertical" >
	        
	        <TextView
	            android:id="@+id/tv_dodaj_nazwa_info"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10sp"
	            android:text="@string/nazwa" />
	
	        <EditText
	            android:id="@+id/et_dodaj_nazwa"
	            style="@style/nazwa_text"
	            android:inputType="textMultiLine"
	            android:maxLength="100"           
	            android:background="@drawable/dodaj_background"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
	
	        <TextView
	            android:id="@+id/tv_dodaj_login_info"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10sp"
	            android:text="@string/login" />
	
	        <EditText
	            android:id="@+id/et_dodaj_login"
	            style="@style/szczegoly_login"
	            android:inputType="text"       
	            android:maxLength="30"   
	            android:background="@drawable/dodaj_background"  
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
	
	        <TextView
	            android:id="@+id/tv_dodaj_haslo_info"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10sp"
	            android:text="@string/haslo" />
	
	        <EditText
	            android:id="@+id/et_dodaj_haslo"
	            style="@style/szczegoly_haslo"
	            android:inputType="text"
	            android:maxLength="30"
	            android:background="@drawable/dodaj_background"  
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
	
	        <TextView
	            android:id="@+id/tv_dodaj_strona_info"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10sp"
	            android:text="@string/strona" />
	
	        <EditText
	            android:id="@+id/et_dodaj_strona"
	            android:inputType="text"
	            android:maxLength="30"
	            android:background="@drawable/dodaj_background"  
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
	
	        <TextView
	            android:id="@+id/tv_dodaj_opis_info"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10sp"
	            android:text="@string/opis" />
	
	        <EditText
	            android:id="@+id/et_dodaj_opis"
	            android:inputType="textMultiLine"
	            android:maxLength="300"
	            android:background="@drawable/dodaj_background"  
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
	        
	        <Button
		        android:id="@+id/button_dodaj"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15sp"
		        android:background="@drawable/shadow_button"
		        android:text="@string/button_dodaj" />
		        
    	</LinearLayout>
	</ScrollView>
       

</RelativeLayout>

