<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    tools:context="${packageName}.${activityClass}" >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:background="@drawable/szczegoly_background"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_szczegoly_nazwa"
                style="@style/nazwa_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_szczegoly_login_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tv_szczegoly_login"
                style="@style/szczegoly_login"
                android:background="@drawable/dodaj_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_szczegoly_haslo_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/haslo" />

            <TextView
                android:id="@+id/tv_szczegoly_haslo"
                style="@style/szczegoly_haslo"
                android:background="@drawable/dodaj_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/button_pokaz"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:background="@drawable/shadow_button"
                android:src="@drawable/padlock_open" />

            <TextView
                android:id="@+id/tv_szczegoly_strona_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/strona" />

            <TextView
                android:id="@+id/tv_szczegoly_strona"
                android:autoLink="web"
                style="@style/szczegoly_strona"
                android:background="@drawable/dodaj_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_szczegoly_opis_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/opis" />

            <TextView
                android:id="@+id/tv_szczegoly_opis"
                style="@style/szczegoly_opis"
                android:background="@drawable/dodaj_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
            android:id="@+id/button_szcegoly"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="@drawable/shadow_button"
            android:text="@string/button_szczegoly" />

        </LinearLayout>
    </ScrollView>
    

</RelativeLayout>